<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="@dimen/nav_header_height"
        android:background="@color/blue"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:theme="@style/ThemeOverlay.AppCompat.Dark"
        android:orientation="vertical"
        android:gravity="bottom">

    <ImageView
            android:layout_width="@dimen/_65sdp"
            android:layout_height="@dimen/_65sdp"
            android:paddingTop="@dimen/nav_header_vertical_spacing"
            app:srcCompat="@drawable/ic_user"
            android:contentDescription="@string/nav_header_desc"
            android:id="@+id/employeePic"/>

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/White"
            android:paddingTop="@dimen/nav_header_vertical_spacing"
            android:text="@string/nav_header_title"
            android:id="@+id/employeeNameMain"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/White"
            android:text="@string/nav_header_subtitle"
            android:id="@+id/employeeEmailMain"/>

</LinearLayout>
