<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.confirmEmail.ConfirmEmail">

    <TextView
            android:layout_width="@dimen/_270sdp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_marginTop="@dimen/_5sdp"
            android:text="AhmedQaisi32@gmail.com"
            android:textSize="@dimen/_15ssp"
            android:textColor="@color/blue"
            android:id="@+id/email"
            android:gravity="center"
            app:layout_constraintStart_toStartOf="@+id/textView11" app:layout_constraintEnd_toEndOf="@+id/textView11"
            app:layout_constraintHorizontal_bias="0.0" app:layout_constraintTop_toBottomOf="@+id/textView11"
            tools:ignore="Autofill,LabelFor"/>
    <TextView
            android:text="@string/let_s_confirm_your_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/blue"
            android:textSize="@dimen/_23ssp"
            android:id="@+id/textView6" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="@dimen/_90sdp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="@dimen/_40sdp" android:layout_marginStart="48dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="48dp" android:layout_marginRight="@dimen/_40sdp"/>
    <TextView
            android:text="@string/just_click_the_link_in_the_email_we_sent_you"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView10" app:layout_constraintStart_toStartOf="@+id/textView6"
            app:layout_constraintEnd_toEndOf="@+id/textView6" android:layout_marginTop="@dimen/_5sdp"
            app:layout_constraintTop_toBottomOf="@+id/textView6"/>
    <TextView
            android:text="@string/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView11" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.061"
            android:layout_marginStart="@dimen/_8sdp" android:layout_marginTop="@dimen/_72sdp"
            app:layout_constraintTop_toBottomOf="@+id/textView10" android:layout_marginEnd="@dimen/_8sdp"
            android:layout_marginRight="@dimen/_8sdp"/>
    <TextView
            android:text="@string/resend_email"
            android:textColor="@color/blue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/resendEmailBtn" app:layout_constraintStart_toStartOf="@+id/email"
            app:layout_constraintEnd_toEndOf="@+id/email" android:layout_marginTop="@dimen/_10sdp"
            app:layout_constraintTop_toBottomOf="@+id/email"/>
    <Button
            android:text="@string/sign_out"
            android:textColor="@color/White"
            android:layout_width="@dimen/_130sdp"
            android:layout_height="@dimen/_35sdp"
            android:id="@+id/getCode" android:background="@drawable/blue_button"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0"
            app:layout_constraintEnd_toStartOf="@+id/verfiyBtn" app:layout_constraintTop_toBottomOf="@+id/resendEmailBtn"
            android:layout_marginTop="@dimen/_48sdp"/>
    <Button
            android:text="@string/verify"
            android:textColor="@color/White"
            android:layout_width="@dimen/_130sdp"
            android:layout_height="@dimen/_35sdp"
            android:id="@+id/verfiyBtn" android:background="@drawable/blue_button"
            app:layout_constraintStart_toEndOf="@+id/getCode" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/getCode" app:layout_constraintBottom_toBottomOf="@+id/getCode"/>
    <ProgressBar
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:id="@+id/progressBar" android:layout_marginTop="@dimen/_8sdp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="@dimen/_8sdp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="@dimen/_8sdp" android:layout_marginRight="@dimen/_8sdp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="@dimen/_8sdp"
            android:layout_marginStart="@dimen/_8sdp" app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintVertical_bias="0.331"/>
</androidx.constraintlayout.widget.ConstraintLayout>