<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/home_background"
        tools:context=".ui.employer.questions.QuestionActivity">
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:orientation="horizontal"
            android:background="@color/blue"
            android:gravity="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:padding="@dimen/_8sdp"
            android:paddingStart="@dimen/_16sdp"
            app:layout_constraintTop_toTopOf="parent" android:id="@+id/appBarLayout">
        <TextView
                android:text="Questions"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:textColor="@color/White"
                android:textStyle="bold"
                android:layout_height="wrap_content" android:id="@+id/textView68"
        />
    </LinearLayout>
    <TextView
            android:text="@string/ask_the_employee_ahmad_al_qaisi"
            android:layout_width="wrap_content"
            android:textSize="@dimen/_13ssp"
            android:textStyle="bold"
            android:layout_height="wrap_content"
            android:id="@+id/titleTxt" android:layout_marginTop="@dimen/_20sdp"
            app:layout_constraintTop_toBottomOf="@+id/appBarLayout"
            app:layout_constraintStart_toStartOf="@+id/appBarLayout"
            app:layout_constraintEnd_toEndOf="@+id/appBarLayout"
            app:layout_constraintHorizontal_bias="0.31"/>
    <EditText
            android:layout_width="@dimen/_250sdp"
            android:layout_height="@dimen/_75sdp"
            android:gravity="start"
            android:textSize="@dimen/_10ssp"
            android:padding="@dimen/_7sdp"
            android:background="@color/gray"
            android:inputType="textPersonName"
            android:hint="@string/write_your_question" android:ems="10"
            android:id="@+id/editText2"
            app:layout_constraintStart_toStartOf="@+id/titleTxt" app:layout_constraintEnd_toEndOf="@+id/titleTxt"
            android:layout_marginTop="@dimen/_25sdp" app:layout_constraintTop_toBottomOf="@+id/titleTxt"
            app:layout_constraintHorizontal_bias="0.0" />
    <Button
            android:text="@string/ask"
            android:background="@drawable/blue_button"
            android:textColor="@color/White"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_25sdp"
            android:id="@+id/AskBtnEmployer" app:layout_constraintEnd_toEndOf="@+id/editText2"
            app:layout_constraintStart_toStartOf="@+id/editText2" app:layout_constraintHorizontal_bias="1.0"
            android:layout_marginTop="@dimen/_10sdp" app:layout_constraintTop_toBottomOf="@+id/textView56"/>
    <TextView
            android:text="@string/answers"
            android:textStyle="bold"
            android:paddingStart="@dimen/_30sdp"
            android:layout_width="match_parent"
            android:paddingTop="@dimen/_2sdp"
            android:background="@color/blue" android:textColor="@color/White"
            android:layout_height="@dimen/_20sdp"
            android:id="@+id/textView555"
            app:layout_constraintStart_toStartOf="@+id/appBarLayout"
            app:layout_constraintEnd_toEndOf="@+id/appBarLayout"
            android:layout_marginTop="@dimen/_25sdp" app:layout_constraintTop_toBottomOf="@+id/AskBtnEmployer"/>

    <TextView
            android:text="00"
            android:textColor="@color/White"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/numOfAnswers"
            app:layout_constraintTop_toTopOf="@+id/textView555"
            app:layout_constraintBottom_toTopOf="@+id/answerRecyclerView"
            app:layout_constraintStart_toStartOf="@+id/textView555"
            android:layout_marginStart="@dimen/_10sdp"/>

    <TextView
            android:text="@string/no_personal_information_other_than_the_question_will_be_shared"
            android:layout_width="wrap_content"
            android:textSize="@dimen/_7ssp"
            android:layout_height="wrap_content"
            android:id="@+id/textView56" app:layout_constraintStart_toStartOf="@+id/editText2"
            app:layout_constraintEnd_toEndOf="@+id/editText2" android:layout_marginTop="@dimen/_8sdp"
            app:layout_constraintTop_toBottomOf="@+id/editText2" app:layout_constraintHorizontal_bias="0.0"/>
    <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            android:layout_height="@dimen/_294sdp"
            android:id="@+id/answerRecyclerView"
            app:layout_constraintTop_toBottomOf="@+id/textView555" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:listitem="@layout/item_answers_employer"/>
    <ProgressBar
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/progressBarQuestion"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="@dimen/_120sdp" app:layout_constraintTop_toTopOf="@+id/appBarLayout"
            app:layout_constraintHorizontal_bias="0.498"/>


</androidx.constraintlayout.widget.ConstraintLayout>